<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252536">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/solveit" />

        <Button
            android:id="@+id/bouton_jouer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#16D6FA"
            android:password="false"
            android:text="@string/button_play_game" />

        <Button
            android:id="@+id/bouton_historique"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#16D6FA"
            android:text="@string/button_history_game" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#169AFA"
            android:text="@string/about" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>